--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,19 @@
 {
     "files.associations": {
-        "mouse.h": "c"
+        "mouse.h": "c",
+        "stdio.h": "c",
+        "lcf.h": "c",
+        "stdint.h": "c",
+        "__functional_base": "c",
+        "future": "c",
+        "locale": "c",
+        "memory": "c",
+        "thread": "c",
+        "tuple": "c",
+        "utility": "c",
+        "istream": "c",
+        "functional": "c",
+        "system_error": "c",
+        "lab3.h": "c"
     }
 }
