--- a/proj/src/Makefile
+++ b/proj/src/Makefile
@@ -2,9 +2,10 @@
 PROG=proj
 
 .PATH: ${.CURDIR}/drivers
+.PATH: ${.CURDIR}/models
 
 # source code files to be compiled
-SRCS = timer.c utils.c main.c gpu.c keyboard.c
+SRCS = timer.c utils.c gpu.c keyboard.c Game.c main.c
 
 # additional compilation flags
 # "-Wall -Wextra -Werror -I . -std=c11 -Wno-unused-parameter" are already set
