--- a/proj/src/Makefile
+++ b/proj/src/Makefile
@@ -3,9 +3,10 @@ PROG=proj
 
 .PATH: ${.CURDIR}/drivers
 .PATH: ${.CURDIR}/models
+.PATH: ${.CURDIR}/viewer
 
 # source code files to be compiled
-SRCS = timer.c utils.c gpu.c keyboard.c Game.c main.c
+SRCS = timer.c utils.c gpu.c keyboard.c Game.c gameView.c main.c
 
 # additional compilation flags
 # "-Wall -Wextra -Werror -I . -std=c11 -Wno-unused-parameter" are already set
