--- a/proj/src/Makefile
+++ b/proj/src/Makefile
@@ -10,7 +10,7 @@ SRCS = timer.c utils.c gpu.c keyboard.c Game.c gameView.c main.c
 
 # additional compilation flags
 # "-Wall -Wextra -Werror -I . -std=c11 -Wno-unused-parameter" are already set
-CFLAGS += -pedantic
+CFLAGS += -pedantic -D_LCOM_OPTIMIZED_ -O2
 
 # list of library dependencies (for Lab 2, only LCF library)
 DPADD += ${LIBLCF}
