--- a/proj/src/Makefile
+++ b/proj/src/Makefile
@@ -4,9 +4,11 @@ PROG=proj
 .PATH: ${.CURDIR}/drivers
 .PATH: ${.CURDIR}/models
 .PATH: ${.CURDIR}/viewer
+.PATH: ${.CURDIR}/controller
+
 
 # source code files to be compiled
-SRCS = timer.c utils.c gpu.c keyboard.c Game.c gameView.c main.c
+SRCS = timer.c utils.c gpu.c keyboard.c Game.c gameView.c controllerKeyboard.c main.c 
 
 # additional compilation flags
 # "-Wall -Wextra -Werror -I . -std=c11 -Wno-unused-parameter" are already set
