--- a/proj/src/.vscode/settings.json
+++ b/proj/src/.vscode/settings.json
@@ -7,6 +7,7 @@
   "editor.wordWrap": "bounded",
   "editor.wordWrapColumn": 100,
   "files.associations": {
-    "lcf.h": "c"
+    "lcf.h": "c",
+    "i8042.h": "c"
   },
 }
