--- a/proj/src/.vscode/settings.json
+++ b/proj/src/.vscode/settings.json
@@ -8,6 +8,7 @@
   "editor.wordWrapColumn": 100,
   "files.associations": {
     "lcf.h": "c",
-    "i8042.h": "c"
+    "i8042.h": "c",
+    "game.h": "c"
   },
 }
