--- a/proj/src/Makefile
+++ b/proj/src/Makefile
@@ -5,10 +5,12 @@ PROG=proj
 .PATH: ${.CURDIR}/models
 .PATH: ${.CURDIR}/viewer
 .PATH: ${.CURDIR}/controller
+.PATH: ${.CURDIR}/utils
+
 
 
 # source code files to be compiled
-SRCS = timer.c utils.c gpu.c keyboard.c mouse.c Game.c gameView.c controllerKeyboard.c main.c 
+SRCS = timer.c utils_drivers.c gpu.c keyboard.c mouse.c Game.c gameView.c controllerKeyboard.c main.c CatInfo.c Entity.c Room.c utils.c
 
 # additional compilation flags
 # "-Wall -Wextra -Werror -I . -std=c11 -Wno-unused-parameter" are already set
