fix efficiency of character sprites by loading everything beforehand

--- a/proj/src/Makefile
+++ b/proj/src/Makefile
@@ -11,7 +11,7 @@ PROG=proj
 
 
 # source code files to be compiled
-SRCS = timer.c utils_drivers.c gpu.c rtclock.c keyboard.c mouse.c Game.c gameView.c controllerKeyboard.c main.c CatInfo.c Entity.c Room.c utils.c controllerMouse.c Position.c HurtBox.c
+SRCS = timer.c utils_drivers.c gpu.c rtclock.c keyboard.c mouse.c Game.c Sprite.c gameView.c controllerKeyboard.c main.c CatInfo.c Entity.c Room.c utils.c controllerMouse.c Position.c HurtBox.c
 
 
 # additional compilation flags
